--- a/UCS.Application/UCS.Application.csproj
+++ b/UCS.Application/UCS.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UCS.Domain\UCS.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
