--- a/UCS.Application/UCS.Application.csproj
+++ b/UCS.Application/UCS.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\UCS.Domain\UCS.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
