--- a/UCS.Web/UCS.Web.csproj
+++ b/UCS.Web/UCS.Web.csproj
@@ -23,4 +23,11 @@
       <ProjectReference Include="..\UCS.Infrastracture\UCS.Infrastracture.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="Views\Shared\_LoginPartial.cshtml">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
