--- a/UCS.Web/UCS.Web.csproj
+++ b/UCS.Web/UCS.Web.csproj
@@ -25,6 +25,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Update="Views\Shared\_SideNav.cshtml">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
       <Content Update="Views\Shared\_LoginPartial.cshtml">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
